test/types/type_variables/deitz/part1/test_clone_class1b.good
test_clone_class1b.chpl:12: error: type mismatch in assignment from real(64) to int(64)
